# pf-web-poly-compile-helper-runner

./: .gitignore  .gitmodules  .mergify.yml  .smart_target_info.json  ALWAYS-ON-TASKS-IMPLEMENTATION.md  AMAZON_Q_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  CI-CD-REVIEW-RESOLUTION.md  CICD_REVIEW_COMPLETED.md  CICD_REVIEW_RESOLUTION.md  CICD_REVIEW_RESPONSE_2025_12_22.md  CODE_CLEANLINESS_ANALYSIS.md  CODE_OF_CONDUCT.md  COMBINED_PRS_SUMMARY.md  CONTRIBUTING.md  DEBUGGING-IMPLEMENTATION.md  ERROR_HANDLING.md  FINAL_CICD_VALIDATION.md  FINAL_TASK_VALIDATION_SUMMARY.md  GIT-CLEANUP-IMPLEMENTATION.md  GLOBAL_REVIEW_2025_12_27.md  IMPLEMENTATION-AUTOMAGIC.md  IMPLEMENTATION_SUMMARY_ERROR_HANDLING.md  INSTALL-TESTING.md  INSTALL.md  INSTALLER_GUIDE.md  INTEGRATION-ROUND-1-SUMMARY.md  INTEGRATION-SUMMARY.md  INTEGRATION_IMPROVEMENTS_SUMMARY.md  ISSUE-78-COMPREHENSIVE-REVIEW.md  ISSUE-78-FINAL-SUMMARY.md  ISSUE-78-GAP-ANALYSIS.md  ISSUE-78-INTEGRATION-VALIDATION.md  ISSUE-81-COMPLETION-SUMMARY.md  ISSUE-RESOLUTION.md  ISSUE_RESPONSE.md  KNOWN_ISSUES.md  LICENSE  LICENSE.md  PKGBUILD  (+99 more)
pf-runner/: #pf_parser.py#  ARCHITECTURE.md  BUILD-HELPERS.md  GRAMMAR_MIGRATION.md  IMPLEMENTATION-SUMMARY.md  LANGS.md  Makefile  PARAMETER-PARSING-FIX.md  Pfyfile.always-on-backup.pf  Pfyfile.always-on-debug.pf  Pfyfile.always-on-exploit.pf  Pfyfile.always-on-git.pf  Pfyfile.always-on-os.pf  Pfyfile.always-on-packages.pf  Pfyfile.always-on-smart.pf  Pfyfile.always-on-tui.pf  Pfyfile.build-helpers.pf  Pfyfile.cleanup.pf  Pfyfile.dev.pf  Pfyfile.pasm.pf  Pfyfile.pf  Pfyfile.tests.pf  README.md  pf  (+37 more)
(+430 files in other folders)
