[project]
name = "pf-runner"
version = "0.1.0"
description = "Central PacketFS command: iprogs, events, pGPU, dispatch, REPL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "fabric>=3.2",
  "lark>=1.1.0",
  "fastapi>=0.109.1",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.109.1",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
pf = "pf_runner.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
